versions/v2.9/modules/en/pages/rancher-admin/users/authn-and-authz/create-local-users.adoc
= Local Authentication
:page-languages: [en, zh]
:revdate: 2024-09-27
:page-revdate: {revdate}
:community-path: how-to-guides/new-user-guides/authentication-permissions-and-global-configuration/authentication-config/create-local-users.adoc 
:product-path: rancher-admin/users/authn-and-authz/create-local-users.adoc

Local authentication is the default until you configure an external authentication provider. Rancher stores user account information, such as usernames and passwords, locally. By default, the `admin` user that logs in to Rancher for the first time is a local user.

== Adding Local Users

Regardless of whether you use external authentication, you should create a few local authentication users so that you can continue using Rancher if your external authentication service encounters issues.

. In the top left corner, click *☰ > Users & Authentication*.
. In the left navigation menu, click *Users*.
. Click *Create*.
. Complete the *Add User* form.
. Click *Create*.
