versions/v2.15/modules/en/pages/rancher-admin/users/authn-and-authz/create-local-users.adoc
= Local Authentication
:page-languages: [en, de, es, fr, ja, pt, zh]
:revdate: 2025-08-05
:page-revdate: {revdate}
:community-path: how-to-guides/new-user-guides/authentication-permissions-and-global-configuration/authentication-config/create-local-users.adoc 
:page-product-path: rancher-admin/users/authn-and-authz/create-local-users.adoc
ifeval::["{build-type}" != "community"]
:xref-authn-and-authz: xref:rancher-admin/users/authn-and-authz/authn-and-authz.adoc
endif::[]
ifeval::["{build-type}" == "community"]
:xref-authn-and-authz: xref:how-to-guides/new-user-guides/authentication-permissions-and-global-configuration/authentication-config/index.adoc
endif::[]

[IMPORTANT]
====
Rancher's local authentication provider is designed primarily to support small-scale deployments and test environments.

Enterprise customers require stronger security controls, such as advanced password policies and centralized identity management. It is highly recommended to configure an {xref-authn-and-authz}[external authentication] provider as your primary method for managing user access. In production environments, local authentication should only be used as an emergency backup to ensure you can access Rancher if your external authentication provider goes down.
====

Local authentication is the default until you configure an external authentication provider. Rancher stores user account information, such as usernames and passwords, locally. By default, the `admin` user that logs in to Rancher for the first time is a local user.

[#_adding_local_users]
== Adding Local Users

Regardless of whether you use external authentication, you should create a few local authentication users so that you can continue using Rancher if your external authentication service encounters issues.

. In the top left corner, click *☰ > Users & Authentication*.
. In the left navigation menu, click *Users*.
. Click *Create*.
. Complete the *Add User* form.
. Click *Create*.
